package dat.entities;

public enum PostStatus {
    PENDING,
    CREATED,
    DELETED
}