package dat.entities;

public enum Role {
    SUB_MEDIA_MODERATOR,
    SUB_MEDIA_OWNER,
    SYSTEM_MODERATOR
}