@startuml

class Validation {
    + static boolean validatePost(Post post)
    + static boolean validateGlobalPostingRequirements(User user)
}

class User {
    - String username
    - Set<Post> posts
    - Set<Comment> comments
    - Set<PostRating> postRatings
    - Set<CommentRating> commentRatings
    - Set<Role> roles
}

class SubMedia {
    - String name
    - Set<Post> posts

    + void createPost(User user, long timestamp, String title, String content)
    + boolean validateRequirements(User user)
    + boolean validatePost(String title,String content)
    + Post getPost(long id)
}

class Post {
    - long id
    - User user
    - SubMedia subMedia
    - long timestamp
    - String title
    - String content
    - Set<Comment> comments
    - Set<PostRating> ratings
    - PostStatus status
    - long views

    + void createComment(User user, long timestamp, String content)
    + boolean like(User user)
    + boolean dislike(User user)
    + boolean neutral(User user)
    + void addView()
}

class PostRating {
    - User user
    - Post post
    - int rating
}

class Comment {
    - long id
    - User user
    - Post post
    - long timestamp
    - String content
    - Set<CommentRating> ratings

    + boolean like(User user)
    + boolean dislike(User user)
    + boolean neutral(User user)
}

class CommentRating {
    - User user
    - Comment comment
    - int rating
}

enum Role {
    SUB_MEDIA_MODERATOR,
    SUB_MEDIA_OWNER,
    SYSTEM_MODERATOR
}

enum PostStatus {
    PENDING,
    CREATED,
    DELETED
}

SubMedia *-- Post

Post *-- Comment
Post *-- PostRating
Post *-- PostStatus

Comment *-- CommentRating

User *-- Post
User *-- Comment
User *-- PostRating
User *-- CommentRating
User *-- Role

@enduml